(Maybe) fixed profile page overflow issue

--- a/src/static/Profile/profile.css
+++ b/src/static/Profile/profile.css
@@ -1,3 +1,5 @@
 .content {
     margin-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
